# MHCSeqNet

./: README.md  pyproject.toml
keras_models/onehot/: model_1.keras  model_2.keras  model_3.keras  model_4.keras  model_5.keras
src/MHCSeqNet/: MHCSeqNet.py
